fixed button sizing on small screens

--- a/src/components/Players/players.css
+++ b/src/components/Players/players.css
@@ -17,19 +17,19 @@ table {
   color: var(--white);
   font-size: 1.1em;
 }
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1400px) {
+  table {
+    width: 60vw;
+    /* margin-left: 4.5%; */
+  }
+}
+
+@media only screen and (max-width: 500px) {
   table {
     width: 90vw;
     /* margin-left: 4.5%; */
   }
 }
-@media only screen and (max-width: 1400px) {
-  table {
-    width: 50vw;
-    /* margin-left: 4.5%; */
-  }
-}
-
 thead tr td {
   border-bottom: 1px solid var(--cream);
 }
